# vbz-h5py-plugin

./: CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml  setup.py
src/test/: test_plugin.py
src/vbz_h5py_plugin/: __init__.py
src/vbz_h5py_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vbz_h5py_plugin/lib/: libvbz_hdf_plugin.dylib
